# HAMA-backend

./: .dockerignore  .env.example  .env.test  .gitignore  AGENTS.md  CLAUDE.md  CORS_FIX_GUIDE.md  DEMO_QUICKSTART.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  langgraph.json  main.py  ngrok.yml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 042be39878e7_remove_automation_level_from_approval_.py  1b4c9dc1c3bf_create_chat_history_tables.py  236a4dc5d173_align_user_profiles_schema.py  44f8edc1fcd4_add_artifacts_table.py  a5a9b52dd593_remove_automation_level_column_from_.py
docs/: DEMO_GUIDE.md  KIS_API_docs.csv  KIS_API_docs.xlsx  PRD.md  README.md  api-quick-reference.md  complete_user_scenarios.md  db_implementation_status.md  frontend-backend-gap-analysis.md  frontend-integration-guide.md  kis-api-integration.md  langgraph-supervisor-architecture.md  mcp_vs_langchain_tool_analysis.md  multi_agent_visualization_guide.md  optimization_results_20251013_202603.md  optimization_summary.md  progress.md  routing-scenarios.md  schema.md  setup-database.md
docs/Langgraph/: langgraph_best_practices.md  langgraph_optimization_plan.md  optimization_plan.md
scripts/: init_db.py  migrate_kis_compatible.py  ngrok_tunnel.sh  seed_data.py  seed_extended_data.py  seed_kis_mock_data.py  seed_macro_data.py  seed_market_data.py  seed_price_history.py  start_celery_beat.sh  start_celery_worker.sh  start_demo.sh  stop_demo.sh  test_api.py  test_cors.sh
src/: langgraph_studio_entry.py  main.py
src/agents/: base.py  (+14 more)
tests/: README_TERMINAL_HITL.md  check_graph.py  conftest.py  debug_graph.py  test_api_chat.py  test_bok_api.py  test_dart_api.py  test_dart_mapping.py  test_e2e_scenario_real.py  test_e2e_stock_analysis.py  test_empty_message_validation.py  test_finance_datareader.py  test_first_node.py  test_general_agent_json.py  test_graph_build.py  test_hitl.py  test_hitl_approval_flow.py  test_hitl_approval_flow.py.DEPRECATED  test_integration.py  test_kis_index.py  test_kis_integration.py  test_kis_service.py  test_kis_stock_name_sync.py  test_llm_configuration.py  test_llm_factory.py  test_optimization_metrics.py  test_pykrx_integration.py  test_random_scenario.py  test_research_data_collection.py  test_research_hitl.py  test_services_integration.py  test_strategy_improvements.py  test_strategy_real.py  test_terminal_hitl.py  test_terminal_hitl_auto.py  test_trading_flow.py  test_trading_hitl_flow.py
tests_legacy/: README.md  conftest.py
(+266 files in other folders)
