[project]
name = "hama-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "langchain==0.3.27",
    "langchain-anthropic==0.3.21",
    "langchain-openai==0.3.34",
    "langgraph==0.6.8",
    "langgraph-checkpoint-redis>=0.1.2",
    "redis>=5.0.0",
    "redisvl>=0.2.5",
    "pandas-stubs==2.3.2.250926",
    "uvicorn>=0.37.0",
    "rich>=14.0.0",
]
