[project]
name = "hama-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.120.0",
    "langchain==1.0.2",
    "langchain-anthropic==1.0.0",
    "langgraph==1.0.1",
    "langgraph-checkpoint-redis>=0.1.2",
    "redis>=5.0.0",
    "redisvl>=0.2.5",
    "pandas-stubs==2.3.2.250926",
    "uvicorn==0.38.0",
    "rich>=14.0.0",
    "langgraph-checkpoint-postgres==3.0.0",
    "langchain-openai==1.0.1",
    "anthropic==0.71.0",
    "dart-fss>=0.4.14",
    "python-dateutil==2.8.2",
    "langgraph-supervisor==0.0.30",
    "langchain-google-genai==3.0.0",
    "setuptools==80.9.0",
]
