[project]
name = "hama-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.17.0",
    "anthropic==0.71.0",
    "beautifulsoup4==4.14.2",
    "celery==5.5.3",
    "dart-fss==0.4.14",
    "fastapi==0.120.0",
    "finance-datareader==0.9.50",
    "httpx==0.28.1",
    "langchain==1.0.2",
    "langchain-anthropic==1.0.0",
    "langchain-community==0.4",
    "langchain-core==1.0.1",
    "langchain-google-genai==3.0.0",
    "langchain-openai==1.0.1",
    "langgraph==1.0.2",
    "langgraph-checkpoint-postgres==3.0.0",
    "langgraph-checkpoint-redis==0.1.2",
    "langgraph-supervisor==0.0.30",
    "lxml==6.0.2",
    "numpy==2.3.3",
    "openai==2.6.1",
    "pandas==2.3.3",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.9",
    "psycopg[binary,pool]>=3.2.0",
    "pykrx>=1.0.46",
    "pydantic==2.11.9",
    "pydantic-settings==2.11.0",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.2.1",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.20",
    "redis<=7.0.0",
    "requests==2.32.5",
    "setuptools==80.9.0",
    "sqlalchemy==2.0.44",
    "uvicorn[standard]==0.38.0",
    "langgraph-cli==0.4.7",
]
